Simplify the `http-form-data` sample and use Java 11 features.
* Remove unused dependencies from `pom.xml`.
* Remove `@MultipartConfig`, an attempted workaround for a bug in multipart handling that doesn't actually help.
* Use conventional spelling for `logger` field. It is not a constant so it should not be spelled `LOGGER`.
* Use `Map.forEach` to iterate over a map.
* Use `List.of(...)` and `Map.of(...)` instead of constructing lists and maps with statements.
* Remove unnecessary `throws IOException`.